--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
             "destination": "server/index.js"
         },
         {
-            "source": "/(.*)",
-            "destination": "client/$1"
+            "source": "/((?!api/|pdfs/|assets/|vite.svg).*)",
+            "destination": "/index.html"
         }
     ],
     "builds": [
