Final fix for SPA routing: Added filesystem handle

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,9 @@
             "destination": "/server/index.js"
         },
         {
+            "handle": "filesystem"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
